--- a/html-css/module_01-02/index.html
+++ b/html-css/module_01-02/index.html
@@ -10,7 +10,7 @@
 		<nav class="nav_bar">
 			<ul class="menu">
 				<li>
-					<a href="#" class="section__menu">Lifestyle</a>
+					<a href="#" class="section__menu">Lifestyle----</a>
 				</li>
 				<li>
 					<a href="#" class="section__menu">Photodiary</a>
