--- a/html-css/module_01-02_add_tasks/index.html
+++ b/html-css/module_01-02_add_tasks/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>module 01-02 add tasks</title>
 		<style type="text/css">
 		   article{
 		   	max-width: 840px;
