--- a/html-css/module_01-02/index.html
+++ b/html-css/module_01-02/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Homework-1</title>
+	<title>Module 1-2</title>
 	<!-- <link rel="stylesheet" href="style/main.css"> -->
 </head>
 <body>
