--- a/html-css/module_03/index.html
+++ b/html-css/module_03/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Module 3</title>
+	<meta charset="UTF-8">
+	<title>Module 3 стили CSS </title>
+	<link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <h2>My name is piter</h2>
-    <!-- Test github1 -->
+	<header>
+		<nav class="nav_bar">
+			<ul class="menu">
+				<li>
+					<a href="#" class="section__menu">Lifestyle</a>
+				</li>
+				<li>
+					<a href="#" class="section__menu">Photodiary</a>
+				</li>
+				<li>
+					<a href="#" class="section__menu">Music</a>
+				</li>
+				<li>
+					<a href="#" class="section__menu">Travel</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<main class="container">
+		<uL class="card_menu">
+			<li class="card">
+				<img src="img/1.jpg" alt="1.jpg" class="card_img">
+				<h3 class="card_img_name">Lifestyle</h3>
+				<h2 class="card_name">More than fust a music festival</h2>
+				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			</li>
+			<li class="card">
+				<img src="img/2.jpg" alt="2.jpg" class="card_img">
+				<h3 class="card_img_name">Lifestyle</h3>
+				<h2 class="card_name">Life tastes better with coffee</h2>
+				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			</li>
+			<li class="card">
+				<img src="img/3.jpg" alt="3.jpg" class="card_img">
+				<h3 class="card_img_name">Lifestyle</h3>
+				<h2 class="card_name">American dream</h2>
+				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			</li>
+			<li class="card">
+				<img src="img/4.jpg" alt="4.jpg" class="card_img">
+				<h3 class="card_img_name">Lifestyle</h3>
+				<h2 class="card_name">A day exploring the Alps</h2>
+				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			</li>
+		</ul>
+	</main>
+	<footer class="footer">
+		<button class="footer_btn" onclick="window.scrollTo(0, 0);">Load more</button>
+	</footer>
 </body>
 </html>
