--- a/html-css/module_01-02/index.html
+++ b/html-css/module_01-02/index.html
@@ -26,6 +26,7 @@
 	</header>
 	<main>
 		<section class="card_section">
+			<!-- пример создания карточек через div -блоки -->
 			<div class="card_row">
 				<div class="card">
 					<img src="img/1.jpg" alt="1.jpg" class="card_img">
