--- a/html-css/module_03_add_task/index.html
+++ b/html-css/module_03_add_task/index.html
@@ -53,7 +53,7 @@
             <div class="card">
               <img src="img/2.jpg" alt="1.img" class="card_img">
               <h3 class="img_name">Lifestyle</h3>
-              <h2 class="card_headline">More than just a music festival</h2>
+              <h2 class="card_headline">Life tastes better with coffee</h2>
               <p class="card_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Qui aspernatur dicta magnam illo maxime dolores commodi deserunt, 
               obcaecati nisi sed!</p>
