--- a/html-css/module_03/index.html
+++ b/html-css/module_03/index.html
@@ -50,6 +50,18 @@
 				<h2 class="card_name">A day exploring the Alps</h2>
 				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
 			</li>
+			<li class="card">
+				<img src="img/5.jpg" alt="4.jpg" class="card_img">
+				<h3 class="card_img_name">Lifestyle</h3>
+				<h2 class="card_name">Top 10 song for running</h2>
+				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			</li>
+			<li class="card">
+				<img src="img/6.jpg" alt="4.jpg" class="card_img">
+				<h3 class="card_img_name">Lifestyle</h3>
+				<h2 class="card_name">Cold winter days</h2>
+				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			</li>
 		</ul>
 	</main>
 	<footer class="footer">
