--- a/html-css/module_03/index.html
+++ b/html-css/module_03/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<nav class="nav_bar">
+		<nav>
 			<ul class="menu">
 				<li>
 					<a href="#" class="section__menu">Lifestyle</a>
