--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -7,25 +7,79 @@
 </head>
 <body>
     <header class="container">   
-        <div class="logo">
-            <p class="text_logo">ART</p>     
-        </div>
-        <nav>
+        <nav class="nav_bar">
+            <a href="#" class="logo">ART</a>     
             <ul class="menu">
                 <li>
-                    <a href="#" class="section_menu">Lifestyle</a>
+                    <a href="#" class="section_menu">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="section_menu">Photodiary</a>
+                    <a href="#" class="section_menu">About us</a>
                 </li>
                 <li>
-                    <a href="#" class="section_menu">Music</a>
+                    <a href="#" class="section_menu">Page</a>
                 </li>
                 <li>
-                    <a href="#" class="section_menu">Travel</a>
+                    <a href="#" class="section_menu">Shop</a>
+                </li>
+                <li>
+                    <a href="#" class="section_menu">Blog</a>
+                </li>
+                <li>
+                    <a href="#" class="section_menu">Contact us</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <main class="container">
+        <section class="featured_products">
+            <h2 class="headline">Featured products</h2>
+            <ul class="featured_list">
+                <li class="featured_item">
+                    <img src="img/images/1.png" alt="">
+                    <a href="" class="slide_mae">Blue tshirt</a>
+                    <p class="slide_cost">$26</p>
+                </li>
+                <li class="featured_item">
+                    <img src="img/images/2.png" alt="">
+                    <a href="" class="slide_mae">Woman shirt</a>
+                    <p class="slide_cost">$31</p>
+                </li>
+                <li class="featured_item">
+                    <img src="img/images/3.png" alt="">
+                    <a href="" class="slide_mae">Yellow tshirt</a>
+                    <p class="slide_cost">$21</p>
+                </li>
+                <li class="featured_item">
+                    <img src="img/images/4.png" alt="">
+                    <a href="" class="slide_mae">Cool lingerie</a>
+                    <p class="slide_cost">$56</p>
+                </li>
+                <li class="featured_item">
+                    <img src="img/images/5.png" alt="">
+                    <a href="" class="slide_mae">Blue tshirt</a>
+                    <p class="slide_cost">$26</p>
+                </li>
+                <li class="featured_item">
+                    <img src="img/images/6.png" alt="">
+                    <a href="" class="slide_mae">Woman shirt</a>
+                    <p class="slide_cost">$31</p>
+                </li>
+                <li class="featured_item">
+                    <img src="img/images/7.png" alt="">
+                    <a href="" class="slide_mae">Yellow tshirt</a>
+                    <p class="slide_cost">$21</p>
+                </li>
+                <li class="featured_item">
+                    <img src="img/images/8.png" alt="">
+                    <a href="" class="slide_mae">Cool lingerie</a>
+                    <p class="slide_cost">$56</p>
+                </li>
+            </ul>
+        </section>
+        <section class="lastes_news">
+
+        </section>
+    </main>
 </body>
 </html>
