module 4 add task

--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -37,48 +37,48 @@
             <ul class="featured_list">
                 <li class="featured_item">
                     <img src="img/images/1.png" alt="">
-                    <a href="" class="slide_mae">Blue tshirt</a>
+                    <a href="" class="slide_text">Blue tshirt</a>
                     <p class="slide_cost">$26</p>
                 </li>
                 <li class="featured_item">
                     <img src="img/images/2.png" alt="">
-                    <a href="" class="slide_mae">Woman shirt</a>
+                    <a href="" class="slide_text">Woman shirt</a>
                     <p class="slide_cost">$31</p>
                 </li>
                 <li class="featured_item">
                     <img src="img/images/3.png" alt="">
-                    <a href="" class="slide_mae">Yellow tshirt</a>
+                    <a href="" class="slide_text">Yellow tshirt</a>
                     <p class="slide_cost">$21</p>
                 </li>
                 <li class="featured_item">
                     <img src="img/images/4.png" alt="">
-                    <a href="" class="slide_mae">Cool lingerie</a>
+                    <a href="" class="slide_text">Cool lingerie</a>
                     <p class="slide_cost">$56</p>
                 </li>
                 <li class="featured_item">
                     <img src="img/images/5.png" alt="">
-                    <a href="" class="slide_mae">Blue tshirt</a>
+                    <a href="" class="slide_text">Blue tshirt</a>
                     <p class="slide_cost">$26</p>
                 </li>
                 <li class="featured_item">
                     <img src="img/images/6.png" alt="">
-                    <a href="" class="slide_mae">Woman shirt</a>
+                    <a href="" class="slide_text">Woman shirt</a>
                     <p class="slide_cost">$31</p>
                 </li>
                 <li class="featured_item">
                     <img src="img/images/7.png" alt="">
-                    <a href="" class="slide_mae">Yellow tshirt</a>
+                    <a href="" class="slide_text">Yellow tshirt</a>
                     <p class="slide_cost">$21</p>
                 </li>
                 <li class="featured_item">
                     <img src="img/images/8.png" alt="">
-                    <a href="" class="slide_mae">Cool lingerie</a>
+                    <a href="" class="slide_text">Cool lingerie</a>
                     <p class="slide_cost">$56</p>
                 </li>
             </ul>
         </section>
         <section class="lastes_news">
-
+                <h2 class="headline">LATEST NEWS</h2>
         </section>
     </main>
 </body>
