mmodule 4 remove folder

--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -36,42 +36,42 @@
             <h2 class="headline">Featured products</h2>
             <ul class="featured_list">
                 <li class="featured_item">
-                    <img src="img/images/1.png" alt="">
+                    <img src="img/1.png" alt="">
                     <a href="" class="slide_text">Blue tshirt</a>
                     <p class="slide_cost">$26</p>
                 </li>
                 <li class="featured_item">
-                    <img src="img/images/2.png" alt="">
+                    <img src="img/2.png" alt="">
                     <a href="" class="slide_text">Woman shirt</a>
                     <p class="slide_cost">$31</p>
                 </li>
                 <li class="featured_item">
-                    <img src="img/images/3.png" alt="">
+                    <img src="img/3.png" alt="">
                     <a href="" class="slide_text">Yellow tshirt</a>
                     <p class="slide_cost">$21</p>
                 </li>
                 <li class="featured_item">
-                    <img src="img/images/4.png" alt="">
+                    <img src="img/4.png" alt="">
                     <a href="" class="slide_text">Cool lingerie</a>
                     <p class="slide_cost">$56</p>
                 </li>
                 <li class="featured_item">
-                    <img src="img/images/5.png" alt="">
+                    <img src="img/5.png" alt="">
                     <a href="" class="slide_text">Blue tshirt</a>
                     <p class="slide_cost">$26</p>
                 </li>
                 <li class="featured_item">
-                    <img src="img/images/6.png" alt="">
+                    <img src="img/6.png" alt="">
                     <a href="" class="slide_text">Woman shirt</a>
                     <p class="slide_cost">$31</p>
                 </li>
                 <li class="featured_item">
-                    <img src="img/images/7.png" alt="">
+                    <img src="img/7.png" alt="">
                     <a href="" class="slide_text">Yellow tshirt</a>
                     <p class="slide_cost">$21</p>
                 </li>
                 <li class="featured_item">
-                    <img src="img/images/8.png" alt="">
+                    <img src="img/8.png" alt="">
                     <a href="" class="slide_text">Cool lingerie</a>
                     <p class="slide_cost">$56</p>
                 </li>
