--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -79,6 +79,14 @@
         </section>
         <section class="lastes_news">
                 <h2 class="headline">LATEST NEWS</h2>
+                <ul class="news_list">
+                    <li class="news_items">
+                        <img src="img/Ln-1.png" alt="1.jpg" class="card_img">
+                        <h3 class="card_img_name">Lifestyle</h3>
+                        <h2 class="card_name">More than fust a music festival</h2>
+                        <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+                    </li>
+                </ul>
         </section>
     </main>
 </body>
