add task commit

--- a/html-css/module_01-02_add_tasks/index.html
+++ b/html-css/module_01-02_add_tasks/index.html
@@ -154,7 +154,7 @@
 			<h2 class="block_title">Внимание Робоцып напал на землю!</h2>
 			<p class="block_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa libero ex consequatur labore consequuntur ut quam eos ipsum natus iure?</p>
 		</div>
-	</section>
+	</article>
 
 	<!-- Нумерованый список с заголовками и абзацами текста -->
 	<article>
