add tadk 3 commit2

--- a/html-css/module_01-02_add_tasks/index.html
+++ b/html-css/module_01-02_add_tasks/index.html
@@ -10,7 +10,7 @@
 		   	padding: 20px 0px;
 		   }
 
-		   .block_news, .text_news{
+		   .block_news{
 		   	width: 400px;
 		   	padding: 10px;
 		   	box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -148,7 +148,7 @@
 	</article>
 
 	<!-- Новостной блок -->
-	<article class="news-block">
+	<article>
 		<div class="block_news">
 			<img src="http://placehold.it/400x200" />
 			<h2 class="block_title">Внимание Робоцып напал на землю!</h2>
