add task commit3

--- a/html-css/module_01-02_add_tasks/index.html
+++ b/html-css/module_01-02_add_tasks/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>module 1-2 add tasks</title>
-		<style type="text/css">
-		   article{
-		   	max-width: 840px;
-		   	margin: 0 auto;
-		   	padding: 20px 0px;
-		   }
+	<style type="text/css">
+		article {
+			max-width: 840px;
+			margin: 0 auto;
+			padding: 20px 0px;
+		}
 
-		   .block_news{
-		   	width: 400px;
-		   	padding: 10px;
-		   	box-shadow: 0 0 10px rgba(0,0,0,0.5);
-		   	border: 1px solid black;
-		   }
-  		</style>
+		.block_news {
+			width: 400px;
+			padding: 10px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+			border: 1px solid black;
+		}
+	</style>
 </head>
+
 <body>
 	<!-- Блок с перечнем линейных и блочных тегов -->
 	<article class="block-inline_tags">
@@ -103,7 +105,7 @@
 				<li>li</li>
 				<li>main</li>
 				<li>map</li>
-				<li>meter 
+				<li>meter
 					<meter min="0" low="16" value="71" high="92" max="100"></meter>
 				</li>
 				<li>nav</li>
@@ -112,11 +114,11 @@
 				<li>ol</li>
 				<li>optgroup
 					<select>
-						 <optgroup label="South America">
-							 <option>Uruguay</option>
-							 <option>Brazil</option>
-							 <option>Argentina</option>
-						 </optgroup>
+						<optgroup label="South America">
+							<option>Uruguay</option>
+							<option>Brazil</option>
+							<option>Argentina</option>
+						</optgroup>
 					</select>
 				</li>
 				<li>option</li>
@@ -130,8 +132,9 @@
 				<li>select</li>
 				<li>summary
 					<details>
-					  <summary>Read more</summary>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra nec nulla vitae mollis.</p>
+						<summary>Read more</summary>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra nec nulla vitae
+							mollis.</p>
 					</details>
 				</li>
 				<li>table</li>
@@ -152,7 +155,8 @@
 		<div class="block_news">
 			<img src="http://placehold.it/400x200" />
 			<h2 class="block_title">Внимание Робоцып напал на землю!</h2>
-			<p class="block_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa libero ex consequatur labore consequuntur ut quam eos ipsum natus iure?</p>
+			<p class="block_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa libero ex consequatur
+				labore consequuntur ut quam eos ipsum natus iure?</p>
 		</div>
 	</article>
 
@@ -161,16 +165,27 @@
 		<div class="text_news">
 			<ol>
 				<li>
-					<h3>Секрет, который заставит людей вас полюбить (The secret of making people like you)</h2>
-					<p>Бюджет рекламы составил около полумиллиона долларов, но зато эта реклама смогла привлечь внимание сотен тысяч человек к основному тексту. Заголовку сложно противиться, ведь каждому человеку на Земле хочется, чтобы его любили, ценили и уважали.
-					</p></li>
-				<li>
-					<h3>Ребенок, который покорил сердца всех (The child who won the hearts of all)</h2>
-					<p>Очень сильный заголовок, задевает «за живое», «выскакивая» перед читателем и говоря: «Ты можешь сколько угодно все отрицать, но у тебя есть эта проблема: ты это знаешь, и я это знаю. Читай дальше, и ты избавишься от нее навсегда!». Людям сложно признавать свои комплексы, но еще сложнее им с этими комплексами жить. Потенциальное решение актуальной проблемы – вот истинная сила этого заголовка.</p>
+					<h3>Секрет, который заставит людей вас полюбить (The secret of making people like you)</h3>
+						<p>Бюджет рекламы составил около полумиллиона долларов, но зато эта реклама смогла привлечь
+							внимание сотен тысяч человек к основному тексту. Заголовку сложно противиться, ведь каждому
+							человеку на Земле хочется, чтобы его любили, ценили и уважали.
+						</p>
 				</li>
 				<li>
-					<h3>Как новое открытие сделало заурядную девушку первой красавицей (How a new discovery made a plain girl beautiful)</h2>
-					<p>Сразу хочу обратить внимание: каждая девушка прекрасна по-своему. Однако общество, медиа и мода навязывают нам стереотипы, из-за которых многие девушки комплексуют по поводу своей внешности. Вполне понятное желание выглядеть красивой и привлекательной. Этот заголовок, также как и предыдущий, взывает к проблеме, но при этом сообщает о наличии решения.</p>
+					<h3>Ребенок, который покорил сердца всех (The child who won the hearts of all)</h3>
+						<p>Очень сильный заголовок, задевает «за живое», «выскакивая» перед читателем и говоря: «Ты
+							можешь сколько угодно все отрицать, но у тебя есть эта проблема: ты это знаешь, и я это
+							знаю. Читай дальше, и ты избавишься от нее навсегда!». Людям сложно признавать свои
+							комплексы, но еще сложнее им с этими комплексами жить. Потенциальное решение актуальной
+							проблемы – вот истинная сила этого заголовка.</p>
+				</li>
+				<li>
+					<h3>Как новое открытие сделало заурядную девушку первой красавицей (How a new discovery made a plain
+						girl beautiful)</h3>
+						<p>Сразу хочу обратить внимание: каждая девушка прекрасна по-своему. Однако общество, медиа и
+							мода навязывают нам стереотипы, из-за которых многие девушки комплексуют по поводу своей
+							внешности. Вполне понятное желание выглядеть красивой и привлекательной. Этот заголовок,
+							также как и предыдущий, взывает к проблеме, но при этом сообщает о наличии решения.</p>
 				</li>
 			</ol>
 		</div>
@@ -188,4 +203,5 @@
 		</div>
 	</article>
 </body>
+
 </html>
