--- a/html-css/module_03/index.html
+++ b/html-css/module_03/index.html
@@ -25,7 +25,7 @@
 		</nav>
 	</header>
 	<main class="container">
-		<uL class="card_menu">
+		<ul class="card_menu">
 			<li class="card">
 				<img src="img/1.jpg" alt="1.jpg" class="card_img">
 				<h3 class="card_img_name">Lifestyle</h3>
