--- a/html-css/module_03/index.html
+++ b/html-css/module_03/index.html
@@ -63,9 +63,7 @@
 				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
 			</li>
 		</ul>
+		<button class="btn" onclick="window.scrollTo(0, 0);">Load more</button>
 	</main>
-	<footer class="footer">
-		<button class="footer_btn" onclick="window.scrollTo(0, 0);">Load more</button>
-	</footer>
 </body>
 </html>
