--- a/html-css/module_03/index.html
+++ b/html-css/module_03/index.html
@@ -26,41 +26,71 @@
 	</header>
 	<main class="container">
 		<ul class="card_menu">
-			<li class="card">
-				<img src="img/1.jpg" alt="1.jpg" class="card_img">
-				<h3 class="card_img_name">Lifestyle</h3>
-				<h2 class="card_name">More than fust a music festival</h2>
-				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			<li>
+				<article class="card">
+					<img src="img/1.jpg" alt="1.jpg" class="card_img">
+					<h3 class="card_img_name">Lifestyle</h3>
+					<h2 class="card_name">More than fust a music festival</h2>
+					<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi ut aliquip ex ea</p>
+				</article>
 			</li>
-			<li class="card">
-				<img src="img/2.jpg" alt="2.jpg" class="card_img">
-				<h3 class="card_img_name">Lifestyle</h3>
-				<h2 class="card_name">Life tastes better with coffee</h2>
-				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			<li>
+				<article class="card">
+					<img src="img/2.jpg" alt="2.jpg" class="card_img">
+					<h3 class="card_img_name">Lifestyle</h3>
+					<h2 class="card_name">Life tastes better with coffee</h2>
+					<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi ut aliquip ex ea</p>
+				</article>
 			</li>
-			<li class="card">
-				<img src="img/3.jpg" alt="3.jpg" class="card_img">
-				<h3 class="card_img_name">Lifestyle</h3>
-				<h2 class="card_name">American dream</h2>
-				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			<li>
+				<article class="card">
+					<img src="img/3.jpg" alt="3.jpg" class="card_img">
+					<h3 class="card_img_name">Lifestyle</h3>
+					<h2 class="card_name">American dream</h2>
+					<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi ut aliquip ex ea</p>
+				</article>
 			</li>
-			<li class="card">
-				<img src="img/4.jpg" alt="4.jpg" class="card_img">
-				<h3 class="card_img_name">Lifestyle</h3>
-				<h2 class="card_name">A day exploring the Alps</h2>
-				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			<li>
+				<article class="card">
+					<img src="img/4.jpg" alt="4.jpg" class="card_img">
+					<h3 class="card_img_name">Lifestyle</h3>
+					<h2 class="card_name">A day exploring the Alps</h2>
+					<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi ut aliquip ex ea</p>
+				</article>
 			</li>
-			<li class="card">
-				<img src="img/5.jpg" alt="4.jpg" class="card_img">
-				<h3 class="card_img_name">Lifestyle</h3>
-				<h2 class="card_name">Top 10 song for running</h2>
-				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			<li>
+				<article class="card">
+					<img src="img/5.jpg" alt="5.jpg" class="card_img">
+					<h3 class="card_img_name">Lifestyle</h3>
+					<h2 class="card_name">Top 10 song for running</h2>
+					<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi ut aliquip ex ea</p>
+				</article>
 			</li>
-			<li class="card">
-				<img src="img/6.jpg" alt="4.jpg" class="card_img">
-				<h3 class="card_img_name">Lifestyle</h3>
-				<h2 class="card_name">Cold winter days</h2>
-				<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
+			<li>
+				<article class="card">
+					<img src="img/6.jpg" alt="6.jpg" class="card_img">
+					<h3 class="card_img_name">Lifestyle</h3>
+					<h2 class="card_name">Cold winter days</h2>
+					<p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi ut aliquip ex ea</p>
+				</article>
 			</li>
 		</ul>
 		<button class="btn" onclick="window.scrollTo(0, 0);">Load more</button>
