--- a/html-css/module_01-02/index.html
+++ b/html-css/module_01-02/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Module 1-2</title>
-	<link rel="stylesheet" href="style/main.css">
+	<!-- <link rel="stylesheet" href="style/main.css"> -->
 </head>
 <body>
 	<header>
