--- a/html-css/module_01-02/index.html
+++ b/html-css/module_01-02/index.html
@@ -8,6 +8,7 @@
 <body>
 	<header>
 		<nav class="nav_bar">
+			<!-- sdfsdfsdf -->
 			<ul class="menu">
 				<li>
 					<a href="#" class="section__menu">Lifestyle</a>
