--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -9,7 +9,7 @@
     <header class="container">   
         <nav class="nav_bar">
             <a href="#" class="logo">ART</a>     
-            <ul class="menu">
+            <ul class="menu clearfix">
                 <li>
                     <a href="#" class="section_menu">Home</a>
                 </li>
@@ -34,59 +34,102 @@
     <main class="container">
         <section class="featured_products">
             <h2 class="headline">Featured products</h2>
-            <ul class="featured_list">
-                <li class="featured_item">
-                    <img src="img/1.png" alt="">
-                    <a href="" class="slide_text">Blue tshirt</a>
-                    <p class="slide_cost">$26</p>
+            <ul class="featured_list clearfix">    
+                <li>
+                    <article class="featured_item">
+                        <img src="img/1.png" alt="">
+                        <a href="#" target="_blank" class="slide_text">Blue tshirt</a>
+                        <p class="slide_cost">$26</p>
+                    </article>
                 </li>
-                <li class="featured_item">
-                    <img src="img/2.png" alt="">
-                    <a href="" class="slide_text">Woman shirt</a>
-                    <p class="slide_cost">$31</p>
+                <li>
+                    <article class="featured_item">
+                        <img src="img/2.png" alt="">
+                        <a href="#" target="_blank" class="slide_text">Woman shirt</a>
+                        <p class="slide_cost">$31</p>
+                    </article>
                 </li>
-                <li class="featured_item">
-                    <img src="img/3.png" alt="">
-                    <a href="" class="slide_text">Yellow tshirt</a>
-                    <p class="slide_cost">$21</p>
+                <li>
+                    <article class="featured_item">
+                        <img src="img/3.png" alt="">
+                        <a href="#" target="_blank" class="slide_text">Yellow tshirt</a>
+                        <p class="slide_cost">$21</p>
+                    </article>
                 </li>
-                <li class="featured_item">
-                    <img src="img/4.png" alt="">
-                    <a href="" class="slide_text">Cool lingerie</a>
-                    <p class="slide_cost">$56</p>
+                <li>
+                    <article class="featured_item">
+                        <img src="img/4.png" alt="">
+                        <a href="#" target="_blank" class="slide_text">Cool lingerie</a>
+                        <p class="slide_cost">$56</p>
+                    </article>
                 </li>
-                <li class="featured_item">
-                    <img src="img/5.png" alt="">
-                    <a href="" class="slide_text">Blue tshirt</a>
-                    <p class="slide_cost">$26</p>
+                <li>
+                    <article class="featured_item">
+                        <img src="img/5.png" alt="">
+                        <a href="#" target="_blank" class="slide_text">Blue tshirt</a>
+                        <p class="slide_cost">$26</p>
+                    </article>
                 </li>
-                <li class="featured_item">
-                    <img src="img/6.png" alt="">
-                    <a href="" class="slide_text">Woman shirt</a>
-                    <p class="slide_cost">$31</p>
+                <li>
+                    <article class="featured_item">
+                        <img src="img/6.png" alt="">
+                        <a href="#" target="_blank" class="slide_text">Woman shirt</a>
+                        <p class="slide_cost">$31</p>
+                    </article>
                 </li>
-                <li class="featured_item">
-                    <img src="img/7.png" alt="">
-                    <a href="" class="slide_text">Yellow tshirt</a>
-                    <p class="slide_cost">$21</p>
+                <li>
+                    <article class="featured_item">
+                        <img src="img/7.png" alt="">
+                        <a href="#" target="_blank" class="slide_text">Yellow tshirt</a>
+                        <p class="slide_cost">$21</p>
+                    </article>
                 </li>
-                <li class="featured_item">
-                    <img src="img/8.png" alt="">
-                    <a href="" class="slide_text">Cool lingerie</a>
-                    <p class="slide_cost">$56</p>
+                <li>
+                    <article class="featured_item">
+                        <img src="img/8.png" alt="">
+                        <a href="#" target="_blank" class="slide_text">Cool lingerie</a>
+                        <p class="slide_cost">$56</p>
+                    </article>
                 </li>
             </ul>
         </section>
-        <section class="lastes_news">
-                <h2 class="headline">LATEST NEWS</h2>
-                <ul class="news_list">
-                    <li class="news_items">
-                        <img src="img/Ln-1.png" alt="1.jpg" class="card_img">
-                        <h3 class="card_img_name">Lifestyle</h3>
-                        <h2 class="card_name">More than fust a music festival</h2>
-                        <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>
-                    </li>
-                </ul>
+        <section class="news container">
+            <h2 class="headline">LATEST NEWS</h2>
+            <ul class="news_list clearfix">
+                <li>
+                    <article class="news_items">
+                        <img src="img/Ln-1.png" alt="Ln-1.jpg">
+                        <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
+                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+                            Nam nec tellus a odio tincidunt auctor a ornare 
+                        </p>
+                        <button class="btn" onclick="window.scrollTo(0, 0);">Read more</button>
+                    </article>
+                </li>
+                <li>
+                    <article class="news_items">
+                        <img src="img/Ln-2.png" alt="Ln-1.jpg">
+                        <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
+                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+                            Nam nec tellus a odio tincidunt auctor a ornare 
+                        </p>
+                        <button class="btn" onclick="window.scrollTo(0, 0);">Read more</button>
+                    </article>
+                </li>
+                <li>
+                    <article class="news_items">
+                        <img src="img/Ln-3.png" alt="Ln-1.jpg">
+                        <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
+                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+                            Nam nec tellus a odio tincidunt auctor a ornare 
+                        </p>
+                        <button class="btn" onclick="window.scrollTo(0, 0);">Read more</button>
+                    </article>
+                </li>
+            </ul>
         </section>
     </main>
 </body>
