--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -37,56 +37,56 @@
             <ul class="featured_list clearfix">    
                 <li>
                     <article class="featured_item">
-                        <img src="img/1.png" alt="">
+                        <img src="img/Featured/1.png" alt="1.png">
                         <a href="#" target="_blank" class="slide_text">Blue tshirt</a>
                         <p class="slide_cost">$26</p>
                     </article>
                 </li>
                 <li>
                     <article class="featured_item">
-                        <img src="img/2.png" alt="">
+                        <img src="img/Featured/2.png" alt="2.png">
                         <a href="#" target="_blank" class="slide_text">Woman shirt</a>
                         <p class="slide_cost">$31</p>
                     </article>
                 </li>
                 <li>
                     <article class="featured_item">
-                        <img src="img/3.png" alt="">
+                        <img src="img/Featured/3.png" alt="3.png">
                         <a href="#" target="_blank" class="slide_text">Yellow tshirt</a>
                         <p class="slide_cost">$21</p>
                     </article>
                 </li>
                 <li>
                     <article class="featured_item">
-                        <img src="img/4.png" alt="">
+                        <img src="img/Featured/4.png" alt="4.png">
                         <a href="#" target="_blank" class="slide_text">Cool lingerie</a>
                         <p class="slide_cost">$56</p>
                     </article>
                 </li>
                 <li>
                     <article class="featured_item">
-                        <img src="img/5.png" alt="">
+                        <img src="img/Featured/5.png" alt="5.png">
                         <a href="#" target="_blank" class="slide_text">Blue tshirt</a>
                         <p class="slide_cost">$26</p>
                     </article>
                 </li>
                 <li>
                     <article class="featured_item">
-                        <img src="img/6.png" alt="">
+                        <img src="img/Featured/6.png" alt="6.png">
                         <a href="#" target="_blank" class="slide_text">Woman shirt</a>
                         <p class="slide_cost">$31</p>
                     </article>
                 </li>
                 <li>
                     <article class="featured_item">
-                        <img src="img/7.png" alt="">
+                        <img src="img/Featured/7.png" alt="7.png">
                         <a href="#" target="_blank" class="slide_text">Yellow tshirt</a>
                         <p class="slide_cost">$21</p>
                     </article>
                 </li>
                 <li>
                     <article class="featured_item">
-                        <img src="img/8.png" alt="">
+                        <img src="img/Featured/8.png" alt="8.png">
                         <a href="#" target="_blank" class="slide_text">Cool lingerie</a>
                         <p class="slide_cost">$56</p>
                     </article>
@@ -98,7 +98,7 @@
             <ul class="news_list clearfix">
                 <li>
                     <article class="news_items">
-                        <img src="img/Ln-1.png" alt="Ln-1.jpg">
+                        <img src="img/News/Ln-1.png" alt="Ln-1.png">
                         <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                         <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
                             vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
@@ -109,7 +109,7 @@
                 </li>
                 <li>
                     <article class="news_items">
-                        <img src="img/Ln-2.png" alt="Ln-1.jpg">
+                        <img src="img/News/ln-2.png" alt="Ln-2.png">
                         <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                         <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
                             vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
@@ -120,7 +120,7 @@
                 </li>
                 <li>
                     <article class="news_items">
-                        <img src="img/Ln-3.png" alt="Ln-1.jpg">
+                        <img src="img/News/ln-3.png" alt="ln-3.jpg">
                         <h3 class="news_title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                         <p class="news_text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh 
                             vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
