add href=mart in modul 4

--- a/html-css/module_04/index.html
+++ b/html-css/module_04/index.html
@@ -8,25 +8,25 @@
 <body>
     <header class="container">   
         <nav class="nav_bar">
-            <a href="#" class="logo">ART</a>     
+            <a href="https://www.google.com/search?q=mart&oq" target="_blank" class="logo">ART</a>     
             <ul class="menu clearfix">
                 <li>
-                    <a href="#" class="section_menu">Home</a>
+                    <a href="#" target="_blank" class="section_menu">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="section_menu">About us</a>
+                    <a href="#" target="_blank"  class="section_menu">About us</a>
                 </li>
                 <li>
-                    <a href="#" class="section_menu">Page</a>
+                    <a href="#" target="_blank"  class="section_menu">Page</a>
                 </li>
                 <li>
-                    <a href="#" class="section_menu">Shop</a>
+                    <a href="#" target="_blank"  class="section_menu">Shop</a>
                 </li>
                 <li>
-                    <a href="#" class="section_menu">Blog</a>
+                    <a href="#" target="_blank"  class="section_menu">Blog</a>
                 </li>
                 <li>
-                    <a href="#" class="section_menu">Contact us</a>
+                    <a href="#" target="_blank"  class="section_menu">Contact us</a>
                 </li>
             </ul>
         </nav>
