--- a/html-css/module_05/index.html
+++ b/html-css/module_05/index.html
@@ -3,8 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Модуль 5</title>
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <!-- Использовать якорные ссылки -->
+    <header class="container">   
+        <nav class="nav_bar">
+            <a href="https://www.google.com/search?q=mart&oq" target="_blank" class="logo">ART</a>     
+            <ul class="menu clearfix">
+                <li>
+                    <a href="#" target="_blank" class="section_menu">Home</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"  class="section_menu">About us</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"  class="section_menu">Page</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"  class="section_menu">Shop</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"  class="section_menu">Blog</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"  class="section_menu">Contact us</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <article class="slider">
+            <nav class="btn_nav container">
+                <button class="btn btn_prev"><</button>
+                <button class="btn btn_next">></button>
+            </nav>
+
+            <ul class="slides">
+                <li class="slides_items">
+                    <img src="img/slider/1.jpg" alt="1">
+                    <h2 class="slides_name">AFFORDABLE PARIS TOURS</h2>
+                    <p class="slides_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                </li>
+            </ul>
+        </article>
+    </section>
 </body>
 </html>
