--- a/html-css/module_05_add_task/index.html
+++ b/html-css/module_05_add_task/index.html
@@ -38,15 +38,15 @@
         </section>
         <section id ="section-2" class="container">
             <div class="color_box">
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+                <div class="box">Child-1</div>
+                <div class="box">Child-2</div>
+                <div class="box">Child-3</div>
+                <div class="box">Child-4</div>
+                <div class="box">Child-5</div>
+                <div class="box">Child-6</div>
+                <div class="box">Child-7</div>
+                <div class="box">Child-8</div>
+                <div class="box">Child-9</div>
             </div>
         </section>
     </main>
